--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
@@ -167,22 +167,22 @@ label {font-weight:400; font-size:14px; margin-bottom:10px; margin-top:3px; widt
 }
 
 .search-field {
-	width: 150px;
-	height: 32px;
-	border-radius: 2px;
-	background-color: #fdfdfd;
-	border: solid 0px #e0e0e0;
-	box-sizing: border-box;
-	border-radius: 2px;
-	font-size: 13px;
-	background-color: white;
-	background-image: url(img/search.png);
-	background-position: 125px 8px;
-	background-repeat: no-repeat;
-	padding: 7px 10px 7px 10px;
-	float: left;
-	outline: none;
-	margin-right: 20px;
+    width: 150px;
+    height: 32px;
+    border-radius: 2px;
+    background-color: #fdfdfd;
+    border: solid 0px #e0e0e0;
+    box-sizing: border-box;
+    border-radius: 2px;
+    font-size: 13px;
+    background-color: white;
+    background-image: url(../Content/img/search.png);
+    background-position: 125px 8px;
+    background-repeat: no-repeat;
+    padding: 7px 10px 7px 10px;
+    float: left;
+    outline: none;
+	margin-right:20px;
 }
 
 .drpdown {
