--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Chinmaya.Registration.Models.FamilyMemberModel
 
 @{
+	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Title = "MyAccount";
 }
 
@@ -28,46 +29,48 @@
 	<!-- Jquery -->
 	<script src="~/Scripts/jquery-3.3.1.js"></script>
 </head>
-<body class="theme_bg">
-	<header>
-		<div class="header_top">
-			<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
-			<div class="header-right">
-				<input name="search" class="search-field" type="text" placeholder="Search..">
-				<select class="drpdown">
-					<option>Our Other Sites</option>
-				</select>
-				<a class="fab fa-facebook-f" href="#"></a>
-				<a class="fab fa-twitter" href="#"></a>
-				<a class="fab fa-google-plus-g" href="#"></a>
-				<a class="fab fa-linkedin-in" href="#"></a>
-				<a class="fas fa-plus" href="#"></a>
-			</div>
-		</div>
-		<div class="header_nav">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
-						<li class="nav-item"> @Html.ActionLink("Program/Event Registration", "ProgramEventRegistration", "Account", new { @class = "nav-link" }) </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
-					</ul>
-					<div class="form-inline my-2 my-lg-0">
-						<span class="navbar-text">Welcome, @ViewBag.Name</span>
-						<ul class="navbar-nav mr-auto">
-							<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
-							<li class="nav-item"> <a class="nav-link" href="#">Sign Out</a> </li>
-						</ul>
-						<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
-					</div>
+@*<body class="theme_bg">*@
+<body>
+	@*<header>
+			<div class="header_top">
+				<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
+				<div class="header-right">
+					<input name="search" class="search-field" type="text" placeholder="Search..">
+					<select class="drpdown">
+						<option>Our Other Sites</option>
+					</select>
+					<a class="fab fa-facebook-f" href="#"></a>
+					<a class="fab fa-twitter" href="#"></a>
+					<a class="fab fa-google-plus-g" href="#"></a>
+					<a class="fab fa-linkedin-in" href="#"></a>
+					<a class="fas fa-plus" href="#"></a>
 				</div>
-			</nav>
-		</div>
-	</header>
+			</div>
+			<div class="header_nav">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
+							<li class="nav-item"> @Html.ActionLink("Program/Event Registration", "ProgramEventRegistration", "Account", new { @class = "nav-link" }) </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
+						</ul>
+						<div class="form-inline my-2 my-lg-0">
+							<span class="navbar-text">Welcome, @ViewBag.Name</span>
+							<span class="navbar-text">Welcome, @User.Identity.GetUserName()</span>
+							<ul class="navbar-nav mr-auto">
+								<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
+								<li class="nav-item"> <a class="nav-link" href="#">Sign Out</a> </li>
+							</ul>
+							<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</header>*@
 
 	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
 	<div class="nav-side-menu">
@@ -78,6 +81,7 @@
 				<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
 					<a href="#"> Account Settings <span class="arrow"></span></a>
 				</li>
+
 				<ul class="sub-menu collapse" id="account">
 					<li><a href="#"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>
 					<li class="active"><a href="#"><img alt="" src="~/Content/img/update-family-info-active.png"> Update Family Info</a></li>
@@ -123,7 +127,10 @@
 								<th scope="col">Name</th>
 								<th scope="col">Date of Birth</th>
 								<th scope="col">Relationship</th>
-								<th scope="col">Grade <img title="" alt="" src="~/Content/img/info-icon.png" data-original-title="Grade in school (fall of current year)" data-toggle="tooltip" data-placement="right"></th>
+								<th scope="col">
+									Grade
+									<img title="" alt="" src="~/Content/img/info-icon.png" data-original-title="Grade in school (fall of current year)" data-toggle="tooltip" data-placement="right" />
+								</th>
 								<th scope="col"></th>
 							</tr>
 						</thead>
@@ -149,27 +156,30 @@
 									<td>9</td>
 									<td><a class="label label-orange" href="#">edit</a></td>
 								</tr>*@
-							
-							
-										<tr>
-										<td>@(ViewBag.User.FirstName+" "+ ViewBag.User.LastName)</td>
-										<td>@(ViewBag.User.DOB.ToShortDateString())</td>
-										<td>self</td>
-										<td>- </td>
-										<td>@Html.ActionLink("Edit","Edit", new {id = ViewBag.User.Id})</td>
-										</tr>
-							 
-							
+
+							@if ((ViewBag.FamilyMember).Count != 0)
+							{
+								<tr>
+									<td>@((ViewBag.FamilyMember[0].UserFirstName) + " " + (ViewBag.FamilyMember[0].UserLastName))</td>
+									<td>@(ViewBag.FamilyMember[0].UserDOB.ToShortDateString())</td>
+									<td>self</td>
+									<td>- </td>
+									@*<td>@Html.ActionLink("Edit", "Edit", new { @class = "label label-orange", id = ViewBag.FamilyMember[0].UserId })</td>*@
+									@*<td><a class="label label-orange" href="#">edit</a></td>*@
+									<td><a href="@Url.Action("Edit","Account", new { id = ViewBag.FamilyMember[0].UserId })"><span class="label label-orange">Edit</span></a></td>
+								</tr>
+							}
 							@foreach (var familyMember in ViewBag.FamilyMember)
-							 {
-										<tr>
-										<td>@(familyMember.FirstName+" "+ familyMember.LastName)</td>
-										<td>@(familyMember.DOB.ToShortDateString())</td>
-										<td>@familyMember.RelationshipId</td>
-										<td>@familyMember.GradeId</td>
-										<td>@Html.ActionLink("Edit","Edit", new {id = familyMember.Id})</td>
-										</tr>
-							 }
+							{
+								<tr>
+									<td>@(familyMember.FirstName + " " + familyMember.LastName)</td>
+									<td>@(familyMember.DOB.ToShortDateString())</td>
+									<td>@familyMember.Relationship</td>
+									<td>@familyMember.Grade</td>
+									@*<td>@Html.ActionLink("Edit", "Edit", new { @class = "label label-orange", id = familyMember.Id })</td>*@
+									<td><a href="@Url.Action("Edit","Account", new { id = familyMember.Id })"><span class="label label-orange">Edit</span></a></td>
+								</tr>
+							}
 						</tbody>
 					</table>
 				</div>
@@ -177,10 +187,11 @@
 		</div>
 	</div>
 	<!-- Modal -->
-	@using (Html.BeginForm("AddFamilyMember", "Account", FormMethod.Post))
-	{
-									@Html.AntiForgeryToken()
-			<div tabindex="-1" class="modal fade bd-example-modal-lg" id="exampleModalCenter" role="dialog" aria-hidden="true" aria-labelledby="exampleModalCenterTitle">
+
+	<div tabindex="-1" class="modal fade bd-example-modal-lg" id="exampleModalCenter" role="dialog" aria-hidden="true" aria-labelledby="exampleModalCenterTitle">
+		@using (Html.BeginForm("AddFamilyMember", "Account", FormMethod.Post, new { id = "AddMemberForm", returnUrl = this.Request.RawUrl }))
+		{
+			@Html.AntiForgeryToken()
 			<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 				<div class="modal-content">
 					<div class="modal-body">
@@ -209,7 +220,7 @@
 								@*<label>Date of Birth <span class="red-txt">*</span></label>
 									<input class="form-control" type="password" placeholder="">*@
 								@Html.LabelFor(m => m.DOB, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.DOB, "{0:dd/MM/yyyy}", new { @class = "form-control", @type = "date" })
+								@Html.TextBoxFor(m => m.DOB, "{0:MMM d, yyyy}", new { @class = "form-control", @type = "date" })
 								@Html.ValidationMessageFor(m => m.DOB)
 							</div>
 							<div class="col-md-6">
@@ -225,7 +236,11 @@
 						</div>
 						<div class="row">
 							<div class="col-md-6">
-								<label>Grade <img title="" alt="" src="~/Content/img/info-icon.png" data-original-title="Grade in school (fall of current year)" data-toggle="tooltip" data-placement="right"></label>
+								<label>
+									Grade
+									<img title="" alt="" src="~/Content/img/info-icon.png" data-original-title="Grade in school (fall of current year)" data-toggle="tooltip" data-placement="right" />
+									@*<img title="" alt="" src="~/Content/img/info-icon.png" data-original-title="Grade in school (fall of current year)" data-toggle="tooltip" data-placement="right">*@
+								</label>
 								@*<select class="form-control">
 										<option>Male</option>
 										<option>Female</option>
@@ -270,8 +285,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	}
+		}
+	</div>
 	<script src="~/Scripts/popper.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="~/Scripts/bootstrap.min.js"></script>
@@ -280,21 +295,23 @@
 		$(function () {
 			$('[data-toggle="tooltip"]').tooltip()
 		})
+				
+		//$(function () {
+		//	$('[data-toggle="tooltip"]').tooltip();
+		//	$("form")[0].reset();
+		//	$('#exampleModalCenter').find('input:text, input:password, select, textarea').val('');
+		//	$('#exampleModalCenter').find('input:radio, input:checkbox').prop('checked', false);
+		//	$('#exampleModalCenter').find('input#DOB').val("");
+		//	$(this).removeData('bs.modal');
+		//})
 		$("#exampleModalCenter").on("hidden.bs.modal", function () {
+			$('[data-toggle="tooltip"]').tooltip();
 			$('#exampleModalCenter').find('input:text, input:password, select, textarea').val('');
 			$('#exampleModalCenter').find('input:radio, input:checkbox').prop('checked', false);
 			$('#exampleModalCenter').find('input#DOB').val("");
 			$(this).removeData('bs.modal');
 		});
-		//$('#btnsubmit').click(function () {
-		//	$('#exampleModalCenter').find('input:text, input:password, select, textarea').val('');
-		//	$('#exampleModalCenter').find('input:radio, input:checkbox').prop('checked', false);
-		//	$('#exampleModalCenter').find('input#DOB').val("");
-		//});
-		
-
 	</script>
-
 </body>
 </html>
 
