--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PaymentMethod.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PaymentMethod.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "PaymentMethod";
+	Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewBag.Title = "PaymentMethod";
 }
 
 <html>
@@ -19,7 +20,7 @@
 	<script src="~/Content/jquery-3.3.1.js"></script>
 </head>
 <body class="theme_bg">
-	<header>
+	@*<header>
 		<div class="header_top">
 			<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
 			<div class="header-right">
@@ -57,7 +58,7 @@
 				</div>
 			</nav>
 		</div>
-	</header>
+	</header>*@
 
 	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
 	<div class="nav-side-menu">
