--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -1,44 +1,97 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>@ViewBag.Title - Chinmaya Mission</title>
+	@Styles.Render("~/Content/css")
+	@Scripts.Render("~/bundles/modernizr")
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<title>Welcome to Chinmaya Mission</title>
+	<!-- Latest compiled and minified CSS -->
+	<link href="~/Content/bootstrap.min.css" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<!-- Custom CSS -->
+	<link href="~/Content/custom-styles.css" rel="stylesheet" type="text/css">
 
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @*@Html.Partial("_LoginPartial")*@
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-</body>
+	@*<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li>@Html.ActionLink("Home", "Index", "Home")</li>
+						<li>@Html.ActionLink("About", "About", "Home")</li>
+						<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+					</ul>
+					@Html.Partial("_LoginPartial")
+				</div>
+			</div>
+		</div>*@
+	<body class="theme_bg">
+		<header>
+			<div class="header_top">
+				<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
+				<div class="header-right">
+					<input name="search" class="search-field" type="text" placeholder="Search..">
+					<select class="drpdown">
+						<option>Our Other Sites</option>
+					</select>
+					<a class="fab fa-facebook-f" href="#"></a>
+					<a class="fab fa-twitter" href="#"></a>
+					<a class="fab fa-google-plus-g" href="#"></a>
+					<a class="fab fa-linkedin-in" href="#"></a>
+					<a class="fas fa-plus" href="#"></a>
+				</div>
+			</div>
+			<div class="header_nav">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
+							<li class="nav-item"> @Html.ActionLink("Program/Event Registration", "ProgramEventRegistration", "Account", new { @class = "nav-link" }) </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
+						</ul>
+						<div class="form-inline my-2 my-lg-0">
+							@*<span class="navbar-text">@*Welcome, @ViewBag.Name</span>*@
+							<span class="navbar-text">Welcome, @User.Identity.Name</span>
+							<ul class="navbar-nav mr-auto">
+								<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
+								<li class="nav-item"> @*<a class="nav-link" href="#">Sign Out</a>*@ @Html.ActionLink("Sign Out", "Login", "Account", new { @class = "nav-link" }) </li>
+							</ul>
+							<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</header>
+		<div class="theme_bg">
+			@RenderBody()
+			<hr />
+			<footer>
+				<p>&copy; @DateTime.Now.Year - Chinmaya Mission</p>
+			</footer>
+		</div>
+
+		@Scripts.Render("~/bundles/jquery")
+		@Scripts.Render("~/bundles/bootstrap")
+		@RenderSection("scripts", required: false)
+	</body>
 </html>
