--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Event.cshtml
@@ -1,21 +1,12 @@
-﻿@using Chinmaya.Registration.Models
-@model Chinmaya.Registration.Models.EventsModel
+﻿@model Chinmaya.Registration.Models.EventsModel
 
 @{
+	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Title = "Event";
-	Layout = "";
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Welcome to Chinmaya Mission</title>
 
-	@Styles.Render("~/Content/css")
+<html>
+<head>
 	<style>
 		.requiredA:after {
 			content: " *";
@@ -23,118 +14,243 @@
 			color: red;
 		}
 	</style>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<title>Welcome to Chinmaya Mission</title>
+	<!-- Latest compiled and minified CSS -->
+	<link href="~/Content/bootstrap.min.css" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<!-- Custom CSS -->
+	<link href="~/Content/custom-styles.css" rel="stylesheet" type="text/css">
+	<!-- Jquery -->
+	<script src="~/Scripts/jquery-3.3.1.js"></script>
 </head>
-<body class="theme_bg">
-	<header class="regi-header">
 
-		<div class="container-fluid">
-			<a href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
-			<div style="width:68px; float:right; margin:0px; margin-top:-1px;"><img style="border-radius:50%; border:2px solid #c7b299;" src="~/Content/img/header-thumbnail.png"></div>
+<body>
+	
+
+	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+	<div class="nav-side-menu">
+
+		<div class="menu-list">
+
+			<ul class="menu-content collapse out" id="menu-content">
+				<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
+					<a href="#"> Account Settings <span class="arrow"></span></a>
+				</li>
+
+				<ul class="sub-menu collapse" id="account">
+					<li><a href="#"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>
+					<li class="active"><a href="#"><img alt="" src="~/Content/img/update-family-info-active.png"> Update Family Info</a></li>
+				</ul>
+
+				<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
+					<a href="#"> Update Contact Info <span class="arrow"></span></a>
+				</li>
+				<ul class="sub-menu collapse" id="contact">
+					<li><a href="#"><img alt="" src="~/Content/img/phone.png"> Phone</a></li>
+					<li><a href="#"><img alt="" src="~/Content/img/email.png"> Email</a></li>
+					<li><a href="#"><img alt="" src="~/Content/img/address.png"> Address</a></li>
+				</ul>
+
+				<li class="collapsed" aria-expanded="false" data-target="#payment" data-toggle="collapse">
+					<a href="#"> Payment Details <span class="arrow"></span></a>
+				</li>
+				<ul class="sub-menu collapse" id="payment">
+					<li><a href="#"><img alt="" src="~/Content/img/past-transations.png"> Past Transactions</a></li>
+					<li><a href="#"><img alt="" src="~/Content/img/print-tax.png"> Print Tax Receipts</a></li>
+				</ul>
+
+				<li>
+					<a href="#">
+						Badri Directory
+					</a>
+				</li>
+			</ul>
 		</div>
-	</header>
-	@using (Html.BeginForm("PersonalDetails", "Account", FormMethod.Post))
-
-	{
-
-		@Html.AntiForgeryToken()
-		<div class="container">
+	</div>
+	<div class="bd-content">
+		@*<h3 class="bd-title">My Account</h3>*@
+		<div class="inner-box">
+			<div class="row mb-3">
+				<div class="col-md-6 table-title">Event Information</div>
+				<div class="col-md-6 text-right"><a class="orange-links" href="#" data-target="#eventModal" data-toggle="modal"><i class="material-icons">add_circle_outline</i> Add Event</a></div>
+			</div>
 			<div class="row">
-				<div class="col-md-8 offset-md-2">
-					<div class="regi-process-bar">
+				<div class="col-md-12 table-responsive">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th scope="col">Name</th>
+								<th scope="col">Weekday</th>
+								<th scope="col">Frequency</th>
+								<th scope="col">Amount</th>
+								<th scope="col"></th>
+							</tr>
+						</thead>
+						<tbody>
+							
+							
+							@foreach (var ev in ViewBag.Events)
+							{
+								<tr>
+									<td>@ev.Name</td>
+									<td>@ev.Weekday</td>
+									<td>@ev.Frequency</td>
+									<td>@ev.Amount</td>
+									<td><a href="@Url.Action("Edit","Account", new { id = ev.Id })"><span class="label label-orange">Edit</span></a></td>
+								</tr>
+							}
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Modal -->
+
+	<div tabindex="-1" class="modal fade bd-example-modal-lg" id="eventModal" role="dialog" aria-hidden="true" aria-labelledby="eventModalTitle">
+		@using (Html.BeginForm("AddEvent", "Account", FormMethod.Post))
+		{
+			@Html.AntiForgeryToken()
+			<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+				<div class="modal-content">
+					<div class="modal-body">
+						<h5 class="modal-title">Add Event</h5>
+
+						@Html.ValidationSummary(true)
+
 						<div class="row">
-							<div class="col-md-5"><div class="regi-heading">Program/Event Registration</div></div>
-							<div class="col-md-7">
-								<div class="row bs-wizard">
-									<div class="col-md-4 bs-wizard-step active">
-										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="property-type.html">1</a>
-										<div class="text-center bs-wizard-stepnum marl-55">Personal</div>
-									</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.Name)
+								@Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.Name)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.Description)
+								@Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.Description)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.WeekdayId)
+								@Html.DropDownList("WeekdayId", new SelectList(ViewBag.Weekday, "Id", "Name", ViewBag.SelectedWeekday), "Select", new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.WeekdayId)
+							</div>
+						</div>
 
-									<div class="col-md-4 bs-wizard-step disabled">
+						<div class="row">
 
-										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="property-details.html">2</a>
-										<div class="text-center bs-wizard-stepnum">Contact</div>
-									</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.FrequencyId)
+								@Html.DropDownList("FrequencyId", new SelectList(ViewBag.Frequency, "Id", "Name", ViewBag.SelectedFrequency), "Select", new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.FrequencyId)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.AgeFrom)
+								@Html.TextBoxFor(m => m.AgeFrom, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.AgeFrom)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.AgeTo)
+								@Html.TextBoxFor(m => m.AgeTo, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.AgeTo)
+							</div>
+						</div>
 
-									<div class="col-md-4 bs-wizard-step disabled">
+						<div class="row">
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.SessionId)
+								@Html.DropDownList("SessionId", new SelectList(ViewBag.Session, "Id", "Name"), "Select", new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.SessionId)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.StartDate)
+								@Html.TextBoxFor(m => m.StartDate, new { @class = "form-control", @type = "date" })
+								@Html.ValidationMessageFor(m => m.StartDate)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.EndDate)
+								@Html.TextBoxFor(m => m.EndDate, new { @class = "form-control", @type = "date" })
+								@Html.ValidationMessageFor(m => m.EndDate)
+							</div>
+						</div>
 
-										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="listing-details.html">3</a>
-										<div class="text-center bs-wizard-stepnum marr-60">Account</div>
-									</div>
+						<div class="row">
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.StartTime)
+								@Html.TextBoxFor(m => m.StartTime, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.StartTime)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.EndTime)
+								@Html.TextBoxFor(m => m.EndTime, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.EndTime)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.Amount)
+								@Html.TextBoxFor(m => m.Amount, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.Amount)
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.Location)
+								@Html.TextBoxFor(m => m.Location, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.Location)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.Instructor)
+								@Html.TextBoxFor(m => m.Instructor, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.Instructor)
+							</div>
+							<div class="col-md-4">
+								@Html.LabelFor(m => m.Contact)
+								@Html.TextBoxFor(m => m.Contact, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.Contact)
+							</div>
+
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								@Html.LabelFor(m => m.Other)
+								@Html.TextBoxFor(m => m.Other, new { @class = "form-control" })
+								@Html.ValidationMessageFor(m => m.Other)
+							</div>
+						</div>
+							<div class="row">
+								<div class="col-md-12">
+									<button class="btn btn-secondary float-left mr-3" id="#btnCancel " type="submit" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
+									<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
 								</div>
 							</div>
 						</div>
 					</div>
-					@Html.ValidationSummary(true)
-					<div class="regi-main-1">
-						<p>
-							<span class="red-txt">*</span> denotes a required field
-						</p>
-						<div class="row">
-							<div class="col-md-6">
-								@*<label>First Name <span class="red-txt">*</span></label>*@
-								@Html.LabelFor(m => m.FirstName, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.FirstName)
-								@Html.ValidationMessageFor(m => m.FirstName)<br /><br />
-							</div>
-							<div class="col-md-6">
-								@*<label>Last Name <span class="red-txt">*</span></label>*@
-								@*<input id="LastName" class="form-control" type="password" placeholder="">*@
-								@Html.LabelFor(m => m.LastName, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.LastName)
-								@Html.ValidationMessageFor(m => m.LastName)<br /><br />
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col-md-6">
-								@*<label>Date of Birth <span class="red-txt">*</span></label>*@
-								@*<input id="DateofBirth" class="form-control" type="password" placeholder="22/08/2018">*@
-								@Html.LabelFor(m => m.DOB, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.DOB, "{0:yyyy-MM-dd}", new { @type = "date" })
-								@Html.ValidationMessageFor(m => m.DOB)<br /><br />
-							</div>
-							<div class="col-md-6">
-								@*<label>Gender <span class="red-txt">*</span></label>*@
-								@Html.LabelFor(m => m.GenderData, new { @class = "requiredA" })
-								@Html.DropDownList("GenderData", new SelectList(ViewBag.Gender, "Id", "Name", ViewBag.SelectedGender), "Select", new { style = "width: 150px" })
-								@Html.ValidationMessageFor(m => m.GenderData)<br /><br />
-							</div>
-							<div class="col-md-6">
-
-								@Html.LabelFor(m => m.AgeGroupData)
-								@*@Html.DropDownListFor(m => m.AgeGroupId, new SelectList(ViewBag.AgeGroupId, "Id", "Name", ViewBag.SelectedAgeGroupId), "Select", new { style = "width: 150px" })*@
-								@Html.DropDownListFor(m => m.AgeGroupData, new SelectList(ViewBag.AgeGroup, "Id", "Name", ViewBag.SelectedAgeGroup), "Select", new { style = "width: 150px" })
-								@Html.ValidationMessageFor(m => m.AgeGroupData)<br /><br />
-							</div>
-
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-
-								@*<input class="btn btn-orange float-right" type="submit" name="BtnNext" value="Continue" />*@
-								<button class="btn btn-secondary float-left" id="btnCancel" type="button" onclick="window.location = '@Url.Action("Login", "Account")'">Cancel <i class="material-icons">cancel</i></button>
-								<button class="btn btn-orange float-right" name="BtnNext" type="submit" data-target="#demo" data-toggle="collapse">Continue <i class="material-icons">check_circle</i></button>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
-		</div>
+			
+		}
+	</div>
+	
+	<script src="~/Scripts/popper.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="~/Scripts/bootstrap.min.js"></script>
+	<script>
 
-	}
+		$(function () {
+			$('[data-toggle="tooltip"]').tooltip()
+		})
+
+		
+		$("#eventModal").on("hidden.bs.modal", function () {
+			$('[data-toggle="tooltip"]').tooltip();
+			$('#eventModal').find('input:text, input:password, select, textarea').val('');
+			$('#eventModal').find('input:radio, input:checkbox').prop('checked', false);
+			$(this).removeData('bs.modal');
+		});
+	</script>
 </body>
 </html>
-@section Scripts {
-	@Scripts.Render("~/bundles/jqueryval")
-	<script type="text/javascript">
-
-
-	</script>
-}
-
-
 
