--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
@@ -59,239 +59,154 @@
 			</nav>
 		</div>
 	</header>*@
-	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
-	<div class="nav-side-menu">
-
-		<div class="menu-list">
-
-			<ul class="menu-content collapse out classes-list" id="menu-content">
-				<li>
-					<a href="#"> About Balavihar Classes </a>
-				</li>
-				<li>
-					<a href="#"> Link 2 </a>
-				</li>
-				<li>
-					<a href="#"> Link 3 </a>
-				</li>
-
-			</ul>
-		</div>
+<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+<div class="nav-side-menu">
+	<div class="menu-list">
+		<ul class="menu-content collapse out classes-list" id="menu-content">
+			<li><a href="#"> About Balavihar Classes </a></li>
+			<li><a href="#"> Link 2 </a></li>
+			<li><a href="#"> Link 3 </a></li>
+		</ul>
 	</div>
-	<div class="bd-content">
-		<div class="row">
-			<div class="col-md-9">
-				<div class="regi-process-bar mt-0">
-					<div class="row">
-						<div class="col-md-5"><div class="regi-heading">Register for Classes and Activities</div></div>
-						<div class="col-md-7">
-							<div class="row bs-wizard">
-								<div class="col-md-4 bs-wizard-step active">
-									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="property-type.html">1</a>
-									<div class="text-center bs-wizard-stepnum marl-55">Register</div>
+</div>
+	
+<div class="bd-content">
+	<div class="row">
+		<div class="col-md-9">
+			<div class="regi-process-bar mt-0">
+				<div class="row">
+					<div class="col-md-5">
+						<div class="regi-heading">Register for Classes and Activities</div>
+					</div>
+					<div class="col-md-7">
+						<div class="row bs-wizard">
+							<div class="col-md-4 bs-wizard-step active">
+								<div class="progress">
+									<div class="progress-bar"></div>
 								</div>
-
-								<div class="col-md-4 bs-wizard-step disabled">
+								<a class="bs-wizard-dot" href="property-type.html">1</a>
+								<div class="text-center bs-wizard-stepnum marl-55">Register</div>
+							</div>
+							<div class="col-md-4 bs-wizard-step disabled">
 									<!-- complete -->
-									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="property-details.html">2</a>
-									<div class="text-center bs-wizard-stepnum">Confirm</div>
+								<div class="progress">
+									<div class="progress-bar"></div>
 								</div>
+									<a class="bs-wizard-dot" href="property-details.html">2</a>
+								<div class="text-center bs-wizard-stepnum">Confirm</div>
+							</div>
 
-								<div class="col-md-4 bs-wizard-step disabled">
+							<div class="col-md-4 bs-wizard-step disabled">
 									<!-- active -->
 									<div class="progress"><div class="progress-bar"></div></div>
 									<a class="bs-wizard-dot" href="listing-details.html">3</a>
 									<div class="text-center bs-wizard-stepnum marr-60">Pay</div>
-								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		@using (Html.BeginForm("ProgramEventRegistration", "Account", FormMethod.Post))
-		{
-			@Html.AntiForgeryToken()
+	</div>
+	@using (Html.BeginForm("ProgramEventRegistration", "Account", FormMethod.Post))
+	{
+		@Html.AntiForgeryToken()
 		<div class="row">
 			<div class="col-md-9">
 				<!--Accordion wrapper-->
 				<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
 					<!-- Accordion card -->
-					<div class="card">
+					@{int i = 0;}
+					
+						<div class="card">
 						<!-- Card header -->
-						<div class="card-header" id="headingOne1" role="tab">
-							<a aria-expanded="true" aria-controls="collapseOne1" href="#collapseOne1" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									Rohan <i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
-						<!-- Card body -->
-						<div class="collapse show" id="collapseOne1" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
-							<div class="card-body">
-								<table class="table table-borderless">
-									<tbody>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox" checked="">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox" checked="">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-									</tbody>
-								</table>
+							<div class="card-header" id="headingOne_0" role="tab">
+								
+								<a aria-expanded="true" aria-controls="collapseOne_0" href="#collapseOne_0" data-toggle="collapse" data-parent="#accordionEx">
+									<h5 class="mb-0">
+										@(ViewBag.obj.FirstName + " " + ViewBag.obj.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+									</h5>
+								</a>								
 							</div>
-						</div>
-					</div>
-					<!-- Accordion card -->
-					<!-- Accordion card -->
-					<div class="card">
-						<!-- Card header -->
-						<div class="card-header" id="headingTwo2" role="tab">
-							<a class="collapsed" aria-expanded="false" aria-controls="collapseTwo2" href="#collapseTwo2" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									Sri Rama <i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
 						<!-- Card body -->
-						<div class="collapse" id="collapseTwo2" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
+							<div class="collapse show" id="collapseOne_0" role="tabpanel" aria-labelledby="headingOne_0" data-parent="#accordionEx">
 							<div class="card-body">
-								<table class="table table-borderless">
-									<tbody>
+							
+							<table class="table table-borderless">
+								<tbody>
+									@foreach (var ev in ViewBag.Events)
+									{
 										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch" checked="">
-													<input type="checkbox">
-													<span class="slider round"></span>
-												</label>
-											</td>
+										<td>@ev.Name   </td>
+										<td>@ev.Weekday @ev.StartTime.ToString(@"hh\:mm") - @ev.EndTime.ToString(@"hh\:mm")</td>
+										<td>$@ev.Amount</td>
+										<td>
+										<label class="switch">
+										<input id="select_0" value="(@ev.Id)_select0" name="select" type="checkbox" checked=""/>
+										<span class="slider round"></span>
+										</label>
+										</td>
 										</tr>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-									</tbody>
-								</table>
+									}
+								</tbody>
+							</table>
 							</div>
-						</div>
-					</div>
-					<!-- Accordion card -->
-					<!-- Accordion card -->
-					<div class="card">
-						<!-- Card header -->
-						<div class="card-header" id="headingThree3" role="tab">
-							<a class="collapsed" aria-expanded="false" aria-controls="collapseThree3" href="#collapseThree3" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									Laxman <i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
-						<!-- Card body -->
-						<div class="collapse" id="collapseThree3" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
+							</div>
+							
+							</div>
+							
+							@foreach (var item in ViewBag.FamilyMember)
+							{
+								<div class="card">
+							<div class="card-header" id="headingOne_@(i+1)" role="tab">
+								
+								<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
+									<h5 class="mb-0">
+										@(ViewBag.FamilyMember[i].FirstName + " " + ViewBag.FamilyMember[i].LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+									</h5>
+								</a>								
+							</div>
+
+							<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
 							<div class="card-body">
-								<table class="table table-borderless">
-									<tbody>
+							
+							<table class="table table-borderless">
+								<tbody>
+									@foreach (var ev in ViewBag.Events)
+									{
 										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox">
-													<span class="slider round"></span>
-												</label>
-											</td>
+										<td>@ev.Name   </td>
+										<td>@ev.Weekday</td>
+										<td>$@ev.Amount</td>
+										<td>
+										<label class="switch">
+										<input id="select_@(i+1)" value="(@ev.Id)_select@(i+1)" name="select" type="checkbox" checked=""/>
+										<span class="slider round"></span>
+										</label>
+										</td>
 										</tr>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox" checked="">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-									</tbody>
-								</table>
+									 }
+								</tbody>
+							</table>
 							</div>
+							</div>
+							
 						</div>
-					</div>
-					<!-- Accordion card -->
+						i++;
+					}
 				</div>
-				<!-- Accordion wrapper -->
 			</div>
 			<div class="col-md-3">
 				<button class="btn btn-orange mb-3" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Checkout</button><br>
 				<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Cancel</button>
 			</div>
 		</div>
-		}
-	</div>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="~/Content/bootstrap.min.js"></script>
+	}
+</div>
+	
+	
+<!-- Latest compiled and minified JavaScript -->
+<script src="~/Content/bootstrap.min.js"></script>
 
 </body>
 </html>
