--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -66,14 +66,14 @@
 							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
 							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
 							<li class="nav-item"> @Html.ActionLink("Program/Event Registration", "ProgramEventRegistration", "Account", new { @class = "nav-link" }) </li>
-							<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
+							<li class="nav-item"> @*<a class="nav-link" href="#">Current Events</a>*@ @Html.ActionLink("Current Events", "Event", "Account", new { @class = "nav-link" })</li>
 							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
 						</ul>
 						<div class="form-inline my-2 my-lg-0">
 							@*<span class="navbar-text">@*Welcome, @ViewBag.Name</span>*@
 							<span class="navbar-text">Welcome, @User.Identity.Name</span>
 							<ul class="navbar-nav mr-auto">
-								<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
+								<li class="nav-item"> @*<a class="nav-link" href="#">My Account</a>*@ @Html.ActionLink("My Account", "MyAccount", "Account", new { @class = "nav-link" })</li>
 								<li class="nav-item"> @*<a class="nav-link" href="#">Sign Out</a>*@ @Html.ActionLink("Sign Out", "Login", "Account", new { @class = "nav-link" }) </li>
 							</ul>
 							<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
